# xm12345_fund_chatbot

./: .env  alembic.ini  app.py  docker-compose.swarm.yml  docker-compose.yml  main.py  pyproject.toml  readme.md
app/config/: database.py  llm_client.py  nlp_model.py  settings.py  speech_client.py
app/core/: embeddings_utils.py  text_formatter.py  util.py  vector.py
app/middleware/: api_rate_limiter.py  auth_logging.py  distributed_rate_limiter.py  rate_limiter.py  redis_rate_limiter.py
app/model/: __init__.py  auth.py  chat.py  feedback.py  guidelines.py  knowledge.py  knowledge_index.py  knowledge_label.py  message.py  message_context.py  ticket.py  vote.py
app/monitor/: connection_monitor.py
app/router/: auth.py  chat.py  graphrag.py  speech.py
app/schema/: auth.py  base.py  dashboard.py  feedback.py  guideline.py  knowledge.py  vote.py
app/service/: auth.py  chat.py  dashboard.py  feedback.py  guideline_matcher.py  guidelines.py  knowledge_catalog.py  knowledge_data_index.py  knowledge_entries.py  knowledge_index.py  knowledge_label.py  rbac.py  search_service.py  vote.py
app/utils/: circuit_breaker.py  db_health_checker.py  file_storage.py
convert_data_to_rag/: 2026.1.9公积金知识三级分类目录.xlsx  20260123.xlsx  20260126.xlsx  20260127.xlsx  20260128.xlsx  20260129.xlsx  convert_data_to_rag.py  debug_convert.py
ui/: index.html
ui/assets/: 403-CZmSj84c.js  404-CTyoqYlV.js  IconLoader-_wguQh1K.js  IconPlus-DCu00Qm-.js  about-CYcwha0u.js  analytics-BvjexEhc.js  badge-D8rsmH0n.js  bot-chat-entojjcQ.js  card-CXEOfyPU.js  database-Dw3Xe9Nb.js  dialog-DdHcYUWU.js  (+37 more)
(+164 files in other folders)
