[project]
name = "agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "python-dateutil>=2.8.2",
    "asyncpg>=0.30.0",
    "bcrypt<4.0.0",
    "bertopic[all]>=0.17.3",
    "edge-tts>=7.2.3",
    "fastapi[standard]>=0.117.1",
    "fastmcp>=2.12.5",
    "graphrag>=2.7.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "mcp>=1.12.4",
    "openai>=1.51.2",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "python-docx>=1.2.0",
    "python-jose>=3.5.0",
    "qwen-agent[llm,mcp]>=0.0.31",
    "redis>=7.0.1",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "slowapi>=0.1.9",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
